Fixed the line gap between the nav bar and the welcome page

--- a/index.css
+++ b/index.css
@@ -491,6 +491,10 @@ a {
 }
 
 @media screen and (max-width: 800px) {
+  #welcome_page {
+    margin-top: -4px;
+  }
+
   #nav_bar_inner li a {
     font-size: 12px;
   }
